plugins {
	id 'java-library'
	id 'maven-publish'
	id 'net.neoforged.moddev' version '2.0.141'
	id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
	distributionType = Wrapper.DistributionType.BIN
}

// Formats the mod version to include the Minecraft version and build number (if present)
// example: 1.0.0+1.18.2-build.100
String buildNumber = System.getenv("GITHUB_RUN_NUMBER")
version = "$mod_version+$minecraft_version-neoforge" + (buildNumber != null ? "-build.$buildNumber" : "")


sourceSets.main.resources {
	// Include resources generated by data generators.
	srcDir('src/generated/resources')

	// Exclude common development only resources from finalized outputs
	exclude("**/*.bbmodel") // BlockBench project files
	exclude("src/generated/**/.cache") // datagen cache files
}

repositories {
	maven { url = "https://maven.blamejared.com/" } // JEI
	maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
	maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
	maven { url "https://maven.misterpemodder.com/libs-release/" } // Shulker Box Tooltip
}

base {
	archivesName = mod_id
}

// Mojang ships Java 21 to end users in 1.21.1, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
	// Specify the version of NeoForge to use.
	version = project.neo_version

	parchment {
		mappingsVersion = project.parchment_mappings_version
		minecraftVersion = project.minecraft_version
	}

	// Default run configurations.
	runs {
		client {
			client()

			// Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
			systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
		}

		server {
			server()
			programArgument '--nogui'
			systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
		}

		// This run config launches GameTestServer and runs all registered gametests, then exits.
		// By default, the server will crash when no gametests are provided.
		// The gametest system is also enabled by default for other run configs under the /test command.
		gameTestServer {
			type = "gameTestServer"
			systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
		}

		data {
			data()

			// example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
			// gameDirectory = project.file('run-data')

			// Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
			programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
		}

		// applies to all the run configs above
		configureEach {
			// Recommended logging data for a userdev environment
			// The markers can be added/remove as needed separated by commas.
			// "SCAN": For mods scan.
			// "REGISTRIES": For firing of registry events.
			// "REGISTRYDUMP": For getting the contents of all registries.
			systemProperty 'forge.logging.markers', 'REGISTRIES'

			// Recommended logging level for the console
			// You can set various levels here.
			// Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
			logLevel = org.slf4j.event.Level.DEBUG
		}
	}

	mods {
		// define mod <-> source bindings
		// these are used to tell the game which sources are for which mod
		// multi mod projects should define one per mod
		"${mod_id}" {
			sourceSet(sourceSets.main)
		}
	}
}

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
	runtimeClasspath.extendsFrom localRuntime
}

dependencies {
	// Nullable annotations.
	implementation 'com.google.code.findbugs:jsr305:3.0.2'
	implementation 'org.jetbrains:annotations:23.0.0'

	// Shulker Box Tooltip
	implementation("com.misterpemodder:shulkerboxtooltip-neoforge:$shulkerboxtooltip_version") { transitive false }
	implementation("com.misterpemodder:shulkerboxtooltip-common:$shulkerboxtooltip_version") { transitive false }
	// Jankson
	compileOnly "blue.endless:jankson:${jankson_version}"

	// Create and its dependencies
	implementation("com.simibubi.create:create-${minecraft_version}:${create_neo_version}:slim") { transitive = false }
	implementation("net.createmod.ponder:ponder-neoforge:${ponder_neo_version}+mc${minecraft_version}")
	compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_neo_version}")
	runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_neo_version}")
	implementation("com.tterrag.registrate:Registrate:${registrate_neo_version}")

	// Development QOL
	runtimeOnly("mezz.jei:jei-$minecraft_version-neoforge:$jei_version") { transitive = false }
}

processResources {
	// set up properties for filling into metadata
	Map<String, Object> properties = [
			minecraft_version: minecraft_version,
			neo_version: neo_version,
			loader_version_range: loader_version_range,
			mod_id: mod_id,
			mod_name: mod_name,
			mod_license: mod_license,
			version: mod_version,
			mod_url: mod_url,
			mod_issues_url: mod_issues_url,
			mod_authors: mod_authors,
			mod_description: mod_description,
			"flywheel_version": flywheel_neo_version,
			"shulkerboxtooltip_version": shulkerboxtooltip_version,
			"create_version": create_neo_version.split("-")[0] // cut off build number
	]
	inputs.properties(properties)

	filesMatching("META-INF/neoforge.mods.toml") {
		expand properties
	}
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
	publications {
		register('mavenJava', MavenPublication) {
			from components.java
		}
	}
	repositories {
		maven {
			url "file://${project.projectDir}/repo"
		}
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}
